--- a/build.gradle
+++ b/build.gradle
@@ -15,5 +15,6 @@ repositories {
 dependencies {
     implementation group: 'junit', name: 'junit', version: '4.12'
     implementation group: 'org.springframework', name: 'spring-context', version: '5.0.5.RELEASE'
-
+    implementation group: 'com.google.guava', name: 'guava', version: '28.1-jre'
+    implementation group: 'com.alibaba', name: 'fastjson', version: '1.2.62'
 }
