--- a/build.gradle
+++ b/build.gradle
@@ -17,4 +17,5 @@ dependencies {
     implementation group: 'org.springframework', name: 'spring-context', version: '5.0.5.RELEASE'
     implementation group: 'com.google.guava', name: 'guava', version: '28.1-jre'
     implementation group: 'com.alibaba', name: 'fastjson', version: '1.2.62'
+    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.10'
 }
