--- a/build.gradle
+++ b/build.gradle
@@ -18,4 +18,5 @@ dependencies {
     implementation group: 'com.google.guava', name: 'guava', version: '28.1-jre'
     implementation group: 'com.alibaba', name: 'fastjson', version: '1.2.62'
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.10'
+    implementation group: 'cn.hutool', name: 'hutool-all', version: '4.5.10'
 }
