--- a/build.gradle
+++ b/build.gradle
@@ -19,4 +19,5 @@ dependencies {
     implementation group: 'com.alibaba', name: 'fastjson', version: '1.2.62'
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.10'
     implementation group: 'cn.hutool', name: 'hutool-all', version: '4.5.10'
+    implementation group: 'org.springframework', name: 'spring-core', version: '5.0.5.RELEASE'
 }
