--- a/build.gradle
+++ b/build.gradle
@@ -22,4 +22,5 @@ dependencies {
     implementation group: 'cn.hutool', name: 'hutool-all', version: '4.5.10'
     implementation group: 'org.springframework', name: 'spring-core', version: '5.0.5.RELEASE'
     implementation group: 'org.projectlombok', name: 'lombok', version: '1.16.20'
+    implementation group: 'org.openjdk.jol', name: 'jol-core', version: '0.13'
 }
