--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,10 @@ dependencies {
     implementation group: 'com.github.rholder', name: 'guava-retrying', version: '2.0.0'
     implementation group: 'com.alibaba', name: 'fastjson', version: '1.2.62'
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.10'
+/*    implementation group: 'org.apache.directory.studio', name: 'org.apache.commons.codec', version: '1.8'
+    implementation group: 'at.bestsolution.efxclipse.eclipse', name: 'org.apache.commons.codec', version: '1.9.0'
+    implementation group: 'commons-codec.wso2', name: 'commons-codec', version: '1.4.0.wso2v1'*/
+    implementation group: 'commons-codec', name: 'commons-codec', version: '1.15'
     implementation group: 'cn.hutool', name: 'hutool-all', version: '4.5.10'
     implementation group: 'org.springframework', name: 'spring-core', version: '5.0.5.RELEASE'
     implementation group: 'org.projectlombok', name: 'lombok', version: '1.16.20'
