--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,9 @@ dependencies {
     implementation group: 'commons-codec', name: 'commons-codec', version: '1.15'
     implementation group: 'cn.hutool', name: 'hutool-all', version: '4.5.10'
     implementation group: 'org.springframework', name: 'spring-core', version: '5.0.5.RELEASE'
-    implementation group: 'org.projectlombok', name: 'lombok', version: '1.16.20'
+    implementation group: 'org.projectlombok', name: 'lombok', version: '1.16.20'/*lombok*/
     implementation group: 'org.openjdk.jol', name: 'jol-core', version: '0.13'/*内存分析*/
     implementation group: 'org.roaringbitmap', name: 'RoaringBitmap', version: '0.9.0'/*压缩位图*/
+    implementation group: 'com.google.protobuf', name: 'protobuf-java', version: '3.13.0'/*protobuf*/
+    implementation group: 'com.google.protobuf', name: 'protobuf-java-util', version: '3.13.0'/*protobuf*/
 }
