--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,8 @@ dependencies {
     implementation group: 'org.projectlombok', name: 'lombok', version: '1.16.20'/*lombok*/
     implementation group: 'org.openjdk.jol', name: 'jol-core', version: '0.13'/*内存分析*/
     implementation group: 'org.roaringbitmap', name: 'RoaringBitmap', version: '0.9.0'/*压缩位图*/
+
     implementation group: 'com.google.protobuf', name: 'protobuf-java', version: '3.13.0'/*protobuf*/
     implementation group: 'com.google.protobuf', name: 'protobuf-java-util', version: '3.13.0'/*protobuf*/
+    implementation group: 'com.googlecode.protobuf-java-format', name: 'protobuf-java-format', version: '1.2'/*protobuf*/
 }
